Fixed several typos
Fixes #224. Fixes #225. Fixes #226.

--- a/site/pages/v4/design/colour-en.hbs
+++ b/site/pages/v4/design/colour-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Colour",
 	"language": "en",
 	"altLangPrefix": "colour",
-	"dateModified": "2014-07-03"
+	"dateModified": "2014-10-14"
 }
 ---
 <span class="wb-prettify all-pre"></span>
@@ -58,7 +58,7 @@
 	<p class="text-success">This text is styled with <code>text-success</code>.</p>
 	<p class="text-info">This text is styled with <code>text-info</code>.</p>
 	<p class="text-warning">This text is styled with <code>text-warning</code>.</p>
-	<p class="text-danger">This text is styled with <code>text-dangeer</code>.</p>
+	<p class="text-danger">This text is styled with <code>text-danger</code>.</p>
 
 	<div class="mrgn-tp-lg">
 		<pre><code>&lt;p class=&quot;text-muted&quot;&gt;This text is styled with &lt;code&gt;text-muted&lt;/code&gt;.&lt;/p&gt;
@@ -66,7 +66,7 @@
 &lt;p class=&quot;text-success&quot;&gt;This text is styled with &lt;code&gt;text-success&lt;/code&gt;.&lt;/p&gt;
 &lt;p class=&quot;text-info&quot;&gt;This text is styled with &lt;code&gt;text-info&lt;/code&gt;.&lt;/p&gt;
 &lt;p class=&quot;text-warning&quot;&gt;This text is styled with &lt;code&gt;text-warning&lt;/code&gt;.&lt;/p&gt;
-&lt;p class=&quot;text-danger&quot;&gt;This text is styled with &lt;code&gt;text-dangeer&lt;/code&gt;.&lt;/p&gt;</code></pre>
+&lt;p class=&quot;text-danger&quot;&gt;This text is styled with &lt;code&gt;text-danger&lt;/code&gt;.&lt;/p&gt;</code></pre>
 	</div>
 
 	<section class="alert alert-info mrgn-tp-lg">
