--- a/site/pages/v4/design/options-en.hbs
+++ b/site/pages/v4/design/options-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Demo of all design features",
 	"language": "en",
 	"altLangPrefix": "options",
-	"dateModified": "2014-08-11"
+	"dateModified": "2014-10-14"
 }
 ---
 <div class="row">
@@ -311,7 +311,7 @@
 
 			<section class="col-md-3">
 				<h3>Upper roman</h3>
-				<ol class="lst-upr-alph">
+				<ol class="lst-upr-rmn">
 					<li>Item</li>
 					<li>Item</li>
 					<li>Item </li>
