--- a/site/pages/v4/design/proximity-en.hbs
+++ b/site/pages/v4/design/proximity-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Margin proximity",
 	"language": "en",
 	"altLangPrefix": "proximity",
-	"dateModified": "2014-07-09"
+	"dateModified": "2014-10-14"
 }
 ---
 <span class="wb-prettify all-pre"></span>
@@ -39,7 +39,7 @@
 
 <section>
 	<h2 class="page-header" id="description">Description</h2>
-	<p>Increase of decrease the proxmity of one object to another by using these classes.  Additionally these classes allow grid and non-grid content to exist in the same row.</p>
+	<p>Increase or decrease the proximity of one object to another by using these classes.  Additionally these classes allow grid and non-grid content to exist in the same row.</p>
 </section>
 
 <section>
