Design guide: Replaced all HTML5 <header> elements with <div> elements in code/examples.

--- a/site/pages/v4/design/options-en.hbs
+++ b/site/pages/v4/design/options-en.hbs
@@ -9,9 +9,9 @@
 <div class="row">
 	<div class="col-md-6">
 		<section id="typography" class="panel panel-default">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Headings</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<h1 class="page-header mrgn-tp-0">h1 heading with underline</h1>
 				<h1 class="mrgn-tp-0">h1 heading <small>With Small Text</small></h1>
@@ -28,9 +28,9 @@
 		</section>
 
 		<section class="panel panel-default" id="quotations">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Quotations</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<blockquote>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -46,9 +46,9 @@
 
 	<div class="col-md-6">
 		<section id="emphasis" class="panel panel-default">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Text emphasis</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<p><strong>Ordinary paragraph</strong> that is long enough to wrap to multiple lines so that you can see how the line spacing looks.</p>
 				<p class="text-muted">Muted colour paragraph.</p>
@@ -80,9 +80,9 @@
 </div>
 
 <section class="panel panel-default" id="tables">
-	<header class="panel-heading">
+	<div class="panel-heading">
 		<h2 class="panel-title">Tables</h2>
-	</header>
+	</div>
 	<div class="panel-body">
 		<div class="row">
 			<section class="col-md-6">
@@ -166,9 +166,9 @@
 		<div class="row">
 			<div class="col-md-12">
 				<section class="panel panel-default" id="images">
-					<header class="panel-heading">
+					<div class="panel-heading">
 						<h2 class="panel-title">Images</h2>
-					</header>
+					</div>
 					<div class="panel-body">
 						<img src="http://placehold.it/140x140" class="img-rounded" alt="A generic square placeholder image with rounded corners" />
 						<img src="http://placehold.it/140x140" class="img-circle" alt="A generic square placeholder image where only the portion within the circle circumscribed about said square is visible" />
@@ -184,9 +184,9 @@
 		<div class="row">
 			<div class="col-md-12">
 				<section class="panel panel-default" id="proximity">
-					<header class="panel-heading">
+					<div class="panel-heading">
 						<h2 class="panel-title">Margin proximity</h2>
-					</header>
+					</div>
 					<div class="panel-body">
 						<p>Text...</p>
 						<p class="mrgn-lft-md">...with medium left margin</p>
@@ -203,9 +203,9 @@
 
 	<div class="col-md-6">
 		<section class="panel panel-default">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Alignment and floats</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<p class="text-left">Left aligned text.</p>
 				<p class="text-center">Center aligned text.</p>
@@ -228,9 +228,9 @@
 </div>
 
 <section class="panel panel-default" id="lists">
-	<header class="panel-heading">
+	<div class="panel-heading">
 		<h2 class="panel-title">Lists</h2>
-	</header>
+	</div>
 	<div class="panel-body">
 		<div class="row">
 			<section class="col-md-3">
@@ -376,9 +376,9 @@
 </section>
 
 <section class="panel panel-default" id="buttons">
-	<header class="panel-heading">
+	<div class="panel-heading">
 		<h2 class="panel-title">Buttons</h2>
-	</header>
+	</div>
 	<div class="panel-body">
 		<section>
 			<h3>Large</h3>
@@ -565,9 +565,9 @@
 </section>
 
 <section class="panel panel-default" id="forms">
-	<header class="panel-heading">
+	<div class="panel-heading">
 		<h2 class="panel-title">Forms</h2>
-	</header>
+	</div>
 	<div class="panel-body">
 		<div class="row">
 			<div class="col-md-7">
@@ -781,9 +781,9 @@
 </section>
 
 <section class="panel panel-default" id="pills">
-	<header class="panel-heading">
+	<div class="panel-heading">
 		<h2 class="panel-title">Pills</h2>
-	</header>
+	</div>
 	<div class="panel-body">
 		<div class="row">
 			<div class="col-md-8">
@@ -825,9 +825,9 @@
 <div class="row">
 	<div class="col-md-3">
 		<section class="panel panel-default" id="borders">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Borders</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<div class="row">
 					<div class="mrgn-tp-md mrgn-rght-md mrgn-bttm-md mrgn-lft-md">
@@ -857,9 +857,9 @@
 
 	<div class="col-md-9">
 		<section class="panel panel-default" id="pagination">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Pagination</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<div class="row">
 					<div class="col-md-6">
@@ -937,9 +937,9 @@
 <div class="row">
 	<div class="col-md-6">
 		<section class="panel panel-default" id="labels">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Labels</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<h1>Example heading <span class="label label-default">New</span></h1>
 				<h2>Example heading <span class="label label-default">New</span></h2>
@@ -963,9 +963,9 @@
 		</section>
 
 		<section class="panel panel-default" id="progressmeter">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Progress bars and meters</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<section class="col-sm-6">
 					<h3>Progress bars</h3>
@@ -992,9 +992,9 @@
 
 	<div class="col-md-6">
 		<section class="panel panel-default" id="badges">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Badges</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<div class="mrgn-tp-lg mrgn-bttm-lg"><a href="#">Inbox <span class="badge">42</span></a></div>
 				<ul class="nav nav-pills">
@@ -1015,9 +1015,9 @@
 		</section>
 
 		<section class="panel panel-default" id="alerts">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Alerts</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<section class="alert alert-danger">
 					<h3>Oh snap!</h3>
@@ -1053,9 +1053,9 @@
 
 <div class="row">
 	<section class="panel panel-default" id="thumbnails">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h2 class="panel-title">Thumbnails</h2>
-		</header>
+		</div>
 		<div class="panel-body">
 			<div class="row">
 				<div class="col-md-3"><a href="#" class="thumbnail"><img src="http://placehold.it/245x180"  alt="Generic placeholder thumbnail" /></a></div>
@@ -1112,9 +1112,9 @@
 	</section>
 
 	<section class="panel panel-default" id="media-object">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h2 class="panel-title">Media object</h2>
-		</header>
+		</div>
 		<div class="panel-body">
 			<section class="media">
 				<a class="pull-left" href="#"><img class="media-object" src="http://placehold.it/64x64" alt="Generic placeholder image" /></a>
@@ -1166,9 +1166,9 @@
 	</section>
 
 	<section class="panel panel-default" id="wells">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h2 class="panel-title">Wells</h2>
-		</header>
+		</div>
 		<div class="panel-body">
 			<div class="row">
 				<section class="col-md-4">
@@ -1193,9 +1193,9 @@
 	</section>
 
 	<section class="panel panel-default" id="list-groups">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h2 class="panel-title">List group</h2>
-		</header>
+		</div>
 		<div class="panel-body">
 			<div class="row">
 				<section class="col-md-4">
@@ -1251,16 +1251,16 @@
 	</section>
 
 	<section class="panel panel-default" id="panels">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h2 class="panel-title">Panels</h2>
-		</header>
+		</div>
 		<div class="panel-body">
 			<div class="row">
 				<div class="col-md-3">
 					<section class="panel panel-primary">
-						<header class="panel-heading">
+						<div class="panel-heading">
 							<h3 class="panel-title">Default panel</h3>
-						</header>
+						</div>
 						<p class="panel-body">This is a default panel</p>
 						<footer class="panel-footer">This is a footer</footer>
 					</section>
@@ -1268,9 +1268,9 @@
 
 				<div class="col-md-3">
 					<section class="panel panel-success">
-						<header class="panel-heading">
+						<div class="panel-heading">
 							<h3 class="panel-title">Success panel</h3>
-						</header>
+						</div>
 						<div class="panel-body">This is a success panel</div>
 						<footer class="panel-footer">This is a footer</footer>
 					</section>
@@ -1278,9 +1278,9 @@
 
 				<div class="col-md-3">
 					<section class="panel panel-danger">
-						<header class="panel-heading">
+						<div class="panel-heading">
 							<h3 class="panel-title">Danger panel</h3>
-						</header>
+						</div>
 						<div class="panel-body">This is a danger panel</div>
 						<footer class="panel-footer">This is a footer</footer>
 					</section>
@@ -1288,9 +1288,9 @@
 
 				<div class="col-md-3">
 					<section class="panel panel-warning">
-						<header class="panel-heading">
+						<div class="panel-heading">
 							<h3 class="panel-title">Warning panel</h3>
-						</header>
+						</div>
 						<div class="panel-body">This is a panel</div>
 						<footer class="panel-footer">This is a footer</footer>
 					</section>
@@ -1300,9 +1300,9 @@
 			<div class="row">
 				<div class="col-md-3">
 					<section class="panel panel-info">
-						<header class="panel-heading">
+						<div class="panel-heading">
 							<h3 class="panel-title">Info panel</h3>
-						</header>
+						</div>
 						<div class="panel-body">This is a panel</div>
 						<footer class="panel-footer">This is a footer</footer>
 					</section>
@@ -1310,9 +1310,9 @@
 
 				<div class="col-md-3">
 					<section class="panel panel-default">
-						<header class="panel-heading">
+						<div class="panel-heading">
 							<h3 class="panel-title">Panel with a nested list group</h3>
-						</header>
+						</div>
 						<div class="panel-body">This is a panel</div>
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item">First Item</li>
@@ -1332,9 +1332,9 @@
 	<div class="row">
 		<div class="col-md-6">
 			<section class="panel panel-default" id="comboboxes">
-				<header class="panel-heading">
+				<div class="panel-heading">
 					<h2 class="panel-title">Opacity</h2>
-				</header>
+				</div>
 				<div class="panel-body">
 					<img class="media-object pull-left mrgn-rght-md mrgn-bttm-md" src="http://placehold.it/64x64" alt="Default opacity" />
 					<img class="media-object opct-20 pull-left mrgn-rght-md mrgn-bttm-md" src="http://placehold.it/64x64" alt="Demo of opct-20" />
@@ -1348,9 +1348,9 @@
 			</section>
 
 			<section class="panel panel-default" id="selects">
-				<header class="panel-heading">
+				<div class="panel-heading">
 					<h2 class="panel-title">Absolute positioning</h2>
-				</header>
+				</div>
 				<div class="panel-body">
 					<div class="row">
 						<div class="col-md-12">
@@ -1380,9 +1380,9 @@
 			</section>
 
 			<section class="panel panel-default">
-				<header class="panel-heading">
+				<div class="panel-heading">
 					<h2 class="panel-title">Visible / Invisible</h2>
-				</header>
+				</div>
 				<div class="panel-body">
 					<p>Content can be made appear or hide using CSS.</p>
 				</div>
@@ -1394,9 +1394,9 @@
 
 		<div class="col-md-6">
 			<section class="panel panel-default">
-				<header class="panel-heading">
+				<div class="panel-heading">
 					<h2 class="panel-title">Icons</h2>
-				</header>
+				</div>
 				<div class="panel-body">
 					<ul class="list-unstyled clmn-2-sm clmn-3-md">
 						<li> <span class="glyphicon glyphicon-adjust"></span></li>
@@ -1427,9 +1427,9 @@
 			</section>
 
 			<section class="panel panel-default" id="search">
-				<header class="panel-heading">
+				<div class="panel-heading">
 					<h2 class="panel-title">Jumbotron</h2>
-				</header>
+				</div>
 				<div class="jumbotron mrgn-bttm-0">
 					<h3>Hello, world!</h3>
 					<p>...</p>
@@ -1442,9 +1442,9 @@
 	</div>
 
 	<section class="panel panel-default">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h2 class="panel-title">Grid layout</h2>
-		</header>
+		</div>
 		<div class="panel-body">
 			<p>There are hundreds of possible layout options. Here are some samples:</p>
 			<section>
