--- a/site/pages/v4/design/panels-en.hbs
+++ b/site/pages/v4/design/panels-en.hbs
@@ -11,9 +11,9 @@
 <div class="row">
 	<section class="col-md-8">
 		<div class="panel panel-default">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Table of contents</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<ul>
 					<li><a href="#description">Description</a></li>
@@ -79,9 +79,9 @@
 	<h2 class="page-header" id="heading">Add a heading</h2>
 	<p>Easily add a heading container to your panel with <code>.panel-heading</code>. You may also include any <code>&lt;h1&gt;</code>-<code>&lt;h6&gt;</code> with a <code>.panel-title</code> class to change the heading size.</p>
 	<section class="panel panel-default">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h3 class="panel-title">Panel title</h3>
-		</header>
+		</div>
 		<div class="panel-body">
 			<p>Panel content</p>
 		</div>
@@ -89,9 +89,9 @@
 
 	<div class="mrgn-tp-lg">
 		<pre><code>&lt;section class=&quot;panel panel-default&quot;&gt;
-	&lt;header class=&quot;panel-heading&quot;&gt;
+	&lt;div class=&quot;panel-heading&quot;&gt;
 		&lt;h3 class=&quot;panel-title&quot;&gt;Panel title&lt;/h3&gt;
-	&lt;/header&gt;
+	&lt;/div&gt;
 	&lt;div class=&quot;panel-body&quot;&gt;
 		&lt;p&gt;Panel content&lt;/p&gt;
 	&lt;/div&gt;
@@ -148,45 +148,45 @@
 	<p>Easily make a panel more meaningful to a particular context by adding any of the contextual state classes.</p>
 
 	<section class="panel panel-primary">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h3 class="panel-title">Panel title (<code>panel-primary</code>)</h3>
-		</header>
+		</div>
 		<div class="panel-body">
 			<p>Panel content</p>
 		</div>
 	</section>
 
 	<section class="panel panel-success">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h3 class="panel-title">Panel title (<code>panel-success</code>)</h3>
-		</header>
+		</div>
 		<div class="panel-body">
 			<p>Panel content</p>
 		</div>
 	</section>
 
 	<section class="panel panel-info">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h3 class="panel-title">Panel title (<code>panel-info</code>)</h3>
-		</header>
+		</div>
 		<div class="panel-body">
 			<p>Panel content</p>
 		</div>
 	</section>
 
 	<section class="panel panel-warning">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h3 class="panel-title">Panel title</h3>
-		</header>
+		</div>
 		<div class="panel-body">
 			<p>Panel content</p>
 		</div>
 	</section>
 
 	<section class="panel panel-danger">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h3 class="panel-title">Panel title</h3>
-		</header>
+		</div>
 		<div class="panel-body">
 			<p>Panel content</p>
 		</div>
@@ -194,45 +194,45 @@
 
 	<div class="mrgn-tp-lg">
 		<pre><code>&lt;section class=&quot;panel panel-primary&quot;&gt;
-	&lt;header class=&quot;panel-heading&quot;&gt;
+	&lt;div class=&quot;panel-heading&quot;&gt;
 		&lt;h3 class=&quot;panel-title&quot;&gt;Panel title (&lt;code&gt;panel-primary&lt;/code&gt;)&lt;/h3&gt;
-	&lt;/header&gt;
+	&lt;/div&gt;
 	&lt;div class=&quot;panel-body&quot;&gt;
 		&lt;p&gt;Panel content&lt;/p&gt;
 	&lt;/div&gt;
 &lt;/section&gt;
 
 &lt;section class=&quot;panel panel-success&quot;&gt;
-	&lt;header class=&quot;panel-heading&quot;&gt;
+	&lt;div class=&quot;panel-heading&quot;&gt;
 		&lt;h3 class=&quot;panel-title&quot;&gt;Panel title (&lt;code&gt;panel-success&lt;/code&gt;)&lt;/h3&gt;
-	&lt;/header&gt;
+	&lt;/div&gt;
 	&lt;div class=&quot;panel-body&quot;&gt;
 		&lt;p&gt;Panel content&lt;/p&gt;
 	&lt;/div&gt;
 &lt;/section&gt;
 
 &lt;section class=&quot;panel panel-info&quot;&gt;
-	&lt;header class=&quot;panel-heading&quot;&gt;
+	&lt;div class=&quot;panel-heading&quot;&gt;
 		&lt;h3 class=&quot;panel-title&quot;&gt;Panel title (&lt;code&gt;panel-info&lt;/code&gt;)&lt;/h3&gt;
-	&lt;/header&gt;
+	&lt;/div&gt;
 	&lt;div class=&quot;panel-body&quot;&gt;
 		&lt;p&gt;Panel content&lt;/p&gt;
 	&lt;/div&gt;
 &lt;/section&gt;
 
 &lt;section class=&quot;panel panel-warning&quot;&gt;
-	&lt;header class=&quot;panel-heading&quot;&gt;
+	&lt;div class=&quot;panel-heading&quot;&gt;
 		&lt;h3 class=&quot;panel-title&quot;&gt;Panel title&lt;/h3&gt;
-	&lt;/header&gt;
+	&lt;/div&gt;
 	&lt;div class=&quot;panel-body&quot;&gt;
 		&lt;p&gt;Panel content&lt;/p&gt;
 	&lt;/div&gt;
 &lt;/section&gt;
 
 &lt;section class=&quot;panel panel-danger&quot;&gt;
-	&lt;header class=&quot;panel-heading&quot;&gt;
+	&lt;div class=&quot;panel-heading&quot;&gt;
 		&lt;h3 class=&quot;panel-title&quot;&gt;Panel title&lt;/h3&gt;
-	&lt;/header&gt;
+	&lt;/div&gt;
 	&lt;div class=&quot;panel-body&quot;&gt;
 		&lt;p&gt;Panel content&lt;/p&gt;
 	&lt;/div&gt;
@@ -257,9 +257,9 @@
 	<p>Content inside the <code>panel-body</code> has a padding applied to it, creating white space.  To remove the padding and have content that is flush with the borders, do not use the <code>panel-body</code> code.</p>
 
 	<section class="panel panel-default">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h3>Panel heading</h3>
-		</header>
+		</div>
 		<table class="table">
 			<thead>
 				<tr>
@@ -294,9 +294,9 @@
 
 	<div class="mrgn-tp-lg">
 		<pre><code>&lt;section class=&quot;panel panel-default&quot;&gt;
-	&lt;header class=&quot;panel-heading&quot;&gt;
+	&lt;div class=&quot;panel-heading&quot;&gt;
 		&lt;h3&gt;Panel heading&lt;/h3&gt;
-	&lt;/header&gt;
+	&lt;/div&gt;
 	&lt;table class=&quot;table&quot;&gt;
 		&lt;thead&gt;
 			&lt;tr&gt;
@@ -348,9 +348,9 @@
 	<p>Mix content that is inside the <code>panel-body</code> with content that is outside the <code>panel-body</code>.</p>
 
 	<section class="panel panel-default">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h3>Panel heading</h3>
-		</header>
+		</div>
 		<div class="panel-body">
 			<p>Some default panel content here. Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
 		</div>
@@ -388,9 +388,9 @@
 
 	<div class="mrgn-tp-lg">
 		<pre><code>&lt;section class=&quot;panel panel-default&quot;&gt;
-	&lt;header class=&quot;panel-heading&quot;&gt;
+	&lt;div class=&quot;panel-heading&quot;&gt;
 		&lt;h3&gt;Panel heading&lt;/h3&gt;&gt;
-	&lt;/header&gt;
+	&lt;/div&gt;
 	&lt;div class=&quot;panel-body&quot;&gt;
 		&lt;p&gt;Some default panel content here. Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit.&lt;/p&gt;
 	&lt;/div&gt;
@@ -442,9 +442,9 @@
 	<p>Easily include full-width <a href="listgroup-en.html">list groups</a> within any panel.</p>
 
 	<section class="panel panel-default">
-		<header class="panel-heading">
+		<div class="panel-heading">
 			<h3>Panel heading</h3>
-		</header>
+		</div>
 		<div class="panel-body">
 			<p>Some default panel content here. Some default panel content here. Some default panel content here. Some default panel content here. Some default panel content here. Some default panel content here.</p>
 		</div>
@@ -459,9 +459,9 @@
 
 	<div class="mrgn-tp-lg">
 		<pre><code>&lt;section class=&quot;panel panel-default&quot;&gt;
-	&lt;header class=&quot;panel-heading&quot;&gt;
+	&lt;div class=&quot;panel-heading&quot;&gt;
 		&lt;h3&gt;Panel heading&lt;/h3&gt;
-	&lt;/header&gt;
+	&lt;/div&gt;
 	&lt;div class=&quot;panel-body&quot;&gt;
 		&lt;p&gt;Some default panel content here. Some default panel content here. Some default panel content here. Some default panel content here. Some default panel content here. Some default panel content here.&lt;/p&gt;
 	&lt;/div&gt;
