--- a/site/pages/v4/design/progressmeter-en.hbs
+++ b/site/pages/v4/design/progressmeter-en.hbs
@@ -11,9 +11,9 @@
 <div class="row">
 	<section class="col-md-8">
 		<div class="panel panel-default">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Table of contents</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<ul>
 					<li><a href="#progress">Progress bar</a></li>
