--- a/site/pages/v4/design/reflow-en.hbs
+++ b/site/pages/v4/design/reflow-en.hbs
@@ -11,9 +11,9 @@
 <div class="row">
 	<section class="col-md-8">
 		<div class="panel panel-default">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Table of contents</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<ul>
 					<li><a href="#intro">Introduction</a></li>
@@ -143,9 +143,9 @@
 			<div class="row">
 				<section class="col-md-8">
 					<div class="panel panel-default">
-						<header class="panel-heading">
+						<div class="panel-heading">
 							<h4 class="panel-title">Table of contents</h4>
-						</header>
+						</div>
 						<div class="panel-body">
 							<ul>
 								<li><a href="#">Link</a></li>
@@ -157,9 +157,9 @@
 
 				<section class="col-md-4">
 					<div class="panel panel-info">
-						<header class="panel-heading">
+						<div class="panel-heading">
 							<h4 class="panel-title">Related</h4>
-						</header>
+						</div>
 						<div class="panel-body">
 							<ul class="list-group">
 								<li class="list-group-item"><a href="#">Link</a></li>
@@ -177,9 +177,9 @@
 			<pre><code>&lt;div class=&quot;row&quot;&gt;
 	&lt;section class=&quot;col-md-8&quot;&gt;
 		&lt;div class=&quot;panel panel-default&quot;&gt;
-			&lt;header class=&quot;panel-heading&quot;&gt;
+			&lt;div class=&quot;panel-heading&quot;&gt;
 				&lt;h4 class=&quot;panel-title&quot;&gt;Table of contents&lt;/h4&gt;
-			&lt;/header&gt;
+			&lt;/div&gt;
 			&lt;div class=&quot;panel-body&quot;&gt;
 				...
 			&lt;/div&gt;
@@ -188,9 +188,9 @@
 
 	&lt;section class=&quot;col-md-4&quot;&gt;
 		&lt;div class=&quot;panel panel-info&quot;&gt;
-			&lt;header class=&quot;panel-heading&quot;&gt;
+			&lt;div class=&quot;panel-heading&quot;&gt;
 				&lt;h4 class=&quot;panel-title&quot;&gt;Related&lt;/h4&gt;
-			&lt;/header&gt;
+			&lt;/div&gt;
 			...
 		&lt;/div&gt;
 	&lt;/section&gt;
@@ -203,9 +203,9 @@
 			<div class="row">
 				<section class="col-md-8 mrgn-bttm-lg">
 					<div class="panel panel-default">
-						<header class="panel-heading">
+						<div class="panel-heading">
 							<h4 class="panel-title">Table of contents</h4>
-						</header>
+						</div>
 						<div class="panel-body">
 							<ul>
 								<li><a href="#">Link</a></li>
@@ -217,9 +217,9 @@
 
 				<section class="col-md-4 pull-right mrgn-bttm-lg">
 					<div class="panel panel-info">
-						<header class="panel-heading">
+						<div class="panel-heading">
 							<h4 class="panel-title">Related</h4>
-						</header>
+						</div>
 						<div class="panel-body">
 							<ul class="list-group">
 								<li class="list-group-item"><a href="#">Link</a></li>
@@ -240,9 +240,9 @@
 			<pre><code>&lt;div class=&quot;row&quot;&gt;
 	&lt;section class=&quot;col-md-8 mrgn-bttm-lg&quot;&gt;
 		&lt;div class=&quot;panel panel-default&quot;&gt;
-			&lt;header class=&quot;panel-heading&quot;&gt;
+			&lt;div class=&quot;panel-heading&quot;&gt;
 				&lt;h4 class=&quot;panel-title&quot;&gt;Table of contents&lt;/h4&gt;
-			&lt;/header&gt;
+			&lt;/div&gt;
 			&lt;div class=&quot;panel-body&quot;&gt;
 				...
 			&lt;/div&gt;
@@ -251,9 +251,9 @@
 
 	&lt;section class=&quot;col-md-4 pull-right mrgn-bttm-lg&quot;&gt;
 		&lt;div class=&quot;panel panel-info&quot;&gt;
-			&lt;header class=&quot;panel-heading&quot;&gt;
+			&lt;div class=&quot;panel-heading&quot;&gt;
 				&lt;h4 class=&quot;panel-title&quot;&gt;Related&lt;/h4&gt;
-			&lt;/header&gt;
+			&lt;/div&gt;
 			...
 		&lt;/div&gt;
 	&lt;/section&gt;
