--- a/site/pages/v4/design/forms-en.hbs
+++ b/site/pages/v4/design/forms-en.hbs
@@ -10,9 +10,9 @@
 <div class="row">
 	<section class="col-md-8 mrgn-bttm-lg">
 		<div class="panel panel-default">
-			<header class="panel-heading">
+			<div class="panel-heading">
 				<h2 class="panel-title">Table of contents</h2>
-			</header>
+			</div>
 			<div class="panel-body">
 				<ul>
 					<li><a href="#description">Description</a></li>
