--- a/site/pages/v4/design/panels-en.hbs
+++ b/site/pages/v4/design/panels-en.hbs
@@ -126,8 +126,8 @@
 	&lt;div class=&quot;panel-body&quot;&gt;
 		&lt;p&gt;Panel content&lt;/p&gt;
 	&lt;/div&gt;
-	&lt;footer class=&quot;panel-footer&quot;&gt;Panel footer&lt;/div&gt;
-&lt;/footer&gt;</code></pre>
+	&lt;footer class=&quot;panel-footer&quot;&gt;Panel footer&lt;/footer&gt;
+&lt;/div&gt;</code></pre>
 	</div>
 
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
