fix typo - added q

--- a/site/pages/v4/design/quotations-en.hbs
+++ b/site/pages/v4/design/quotations-en.hbs
@@ -137,7 +137,7 @@
 
 <section>
     <h2 class="page-header" id="inline">Inline quotes</h2>
-    <p>For phrasing content quoted from another source. Use <code>&lt;&gt;</code> if a quotation is short and appears within a paragraph.</p>
+    <p>For phrasing content quoted from another source. Use <code>&lt;q&gt;</code> if a quotation is short and appears within a paragraph.</p>
 	
 	<p>"<q>Our Government is committed to protecting livestock health</q>" said Minister Ritz.</p>
 
