adding secondary menu documentation

--- a/site/pages/v4/design/index-en.hbs
+++ b/site/pages/v4/design/index-en.hbs
@@ -4,7 +4,7 @@
 	"language": "en",
 	"altLangPrefix": "index",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-08-06"
+	"dateModified": "2015-05-01"
 }
 ---
 <div class="row">
@@ -100,6 +100,7 @@
 				<li><a href="listgroup-en.html">List group </a></li>
 				<li><a href="pagination-en.html">Pagination</a></li>
 				<li><a href="pills-en.html">Pills</a></li>
+				<li><a href="secondarymenu-en.html">Secondary menu</a></li>
 			</ul>
 		</section>
 
