Font Awesome CDN: Changed subdomain references to maxcdn.
Netdna is an outdated Bootstrap CDN subdomain that's blocked by certain corporate network filters. It officially changed to maxcdn a few years ago. Maxcdn is also recommended on Font Awesome's getting started page (http://fontawesome.io/get-started/).

--- a/site/pages/v4/design/icons-en.hbs
+++ b/site/pages/v4/design/icons-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Icons",
 	"language": "en",
 	"altLangPrefix": "icons",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
+	"css": ["http://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-02-28"
 }
 ---
@@ -78,7 +78,7 @@
  <p>400+ glyphs in font format from the <a href="http://fontawesome.io/icons/">Font Awesome</a> set. Font Awesome is a free resource. Due to the increased number of options balanced with the desire to reduce the file size of a page, these icons can be added to page. They are not part of the core build.</p>
  <div class="alert alert-info">
   <h4>Instructions</h4>
-  <p>Simply add this code within the &lt;head&gt; of the page: <code>&lt;link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"&gt;</code></p>
+  <p>Simply add this code within the &lt;head&gt; of the page: <code>&lt;link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"&gt;</code></p>
  </div>
  <p>If an icon is needed, attempt  to use the glyphicon option  as these icons are already being downloaded by the user. However if more options are needed, bring in the Font Awesome set as needed. </p>
  <h2 class="page-header" id="contact">Contact and communication icons</h2>
