--- a/site/pages/v4/index-en.hbs
+++ b/site/pages/v4/index-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Style guide",
 	"language": "en",
 	"altLangPrefix": "index",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
+	"css": ["http://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-08-06"
 }
 ---
