Correct bilingual 'writing' pages in 'writing' folder
Accidently put the files in the root of master instead of the writing/ folder.

--- a/site/pages/v4/writing/dvlpmnt-en.hbs
+++ b/site/pages/v4/writing/dvlpmnt-en.hbs
@@ -293,3 +293,4 @@
        <footer class="text-right">Infocentric<br>
         <cite><a href="https://www.google.ca/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=1&amp;cad=rja&amp;uact=8&amp;ved=0ahUKEwi5xsvNq93KAhVG6x4KHehIDTwQFggbMAA&amp;url=https%253A%252F%252Fwijvan.winkwaves.com%252Fdocuments%252F3218&amp;usg=AFQjCNH1TJ5LS6C_GbPqr3dh1QIoH3zl5g&amp;sig2=l-oYdA3Jmll1WbmsEvxOPw&amp;bvm=bv.113370389,d.dmo" rel="external">The digital  workplace: Redefining productivity in the information age (<abbr title="Portable document format">PDF</abbr>, 3.5 <abbr title="megabytes">MB</abbr>) <span  class="wb-inv"> (external link)</span></a></cite></footer>
     </blockquote>
+</div>
