--- a/site/pages/v4/writing/strctr-en.hbs
+++ b/site/pages/v4/writing/strctr-en.hbs
@@ -106,7 +106,7 @@
 
 
     <p>Since you can&rsquo;t identify all user needs, and because these needs change,  content creators should provide users with a <strong>feedback mechanism</strong>. Content  owners should be open to users' suggestions for changes and modifications. </p>
-
+</div>
 <h2 id="heading"><span id="heading-heading">Optimize headings and menu labels</span></h2>
   <div id="heading-info">
     <div class="well">
