--- a/site/pages/v4/design/icons-fr.hbs
+++ b/site/pages/v4/design/icons-fr.hbs
@@ -3,7 +3,7 @@
 	"title": "Icônes",
 	"language": "fr",
 	"altLangPrefix": "icons",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
+	"css": ["http://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"],
 	"dateModified": "2016-10-17"
 }
 ---
