--- a/site/pages/v4/design/panels-en.hbs
+++ b/site/pages/v4/design/panels-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Panels",
 	"language": "en",
 	"altLangPrefix": "panels",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome", "css/gridify" ],
+	"css": ["http://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css", "css/gridify" ],
 	"dateModified": "2016-10-17"
 }
 ---
