--- a/site/pages/v4/design/visible-fr.hbs
+++ b/site/pages/v4/design/visible-fr.hbs
@@ -3,7 +3,7 @@
 	"title": "Contenu visible et invisible",
 	"language": "fr",
 	"altLangPrefix": "visible",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome", "css/visible-demo"],
+	"css": ["http://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css", "css/visible-demo"],
 	"dateModified": "2016-10-17"
 }
 ---
