Fixed reference to font-awesome CSS (again)
My last pull request had .css at the end and the build added another .css so it was .css.css  Fixed it now

--- a/site/pages/v4/design/position-en.hbs
+++ b/site/pages/v4/design/position-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Absolute positioning",
 	"language": "en",
 	"altLangPrefix": "position",
-	"css": ["http://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css", "css/gridify" ],
+	"css": ["http://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome", "css/gridify" ],
 	"dateModified": "2016-10-17"
 }
 ---
