--- a/site/pages/v4/design/code-fr.hbs
+++ b/site/pages/v4/design/code-fr.hbs
@@ -3,7 +3,7 @@
 	"title": "Code",
 	"language": "fr",
 	"altLangPrefix": "code",
-	"css": ["http://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css", "css/gridify" ],
+	"css": ["http://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome", "css/gridify" ],
 	"dateModified": "2016-10-17"
 }
 ---
