--- a/site/pages/v4/design/icons-en.hbs
+++ b/site/pages/v4/design/icons-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Icons",
 	"language": "en",
 	"altLangPrefix": "icons",
-	"css": ["http://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"],
+	"css": ["http://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2016-10-17"
 }
 ---
