Upgraded Font Awesome CSS from 4.0.3 to 4.7.0
Upgraded to a newer version of Font Awesome

--- a/site/pages/v4/design/icons-en.hbs
+++ b/site/pages/v4/design/icons-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Icons",
 	"language": "en",
 	"altLangPrefix": "icons",
-	"css": ["http://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
+	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min"],
 	"dateModified": "2016-10-17"
 }
 ---
