--- a/site/pages/v4/design/variables-fr.hbs
+++ b/site/pages/v4/design/variables-fr.hbs
@@ -3,7 +3,7 @@
 	"title": "Variables",
 	"language": "fr",
 	"altLangPrefix": "variables",
-	"css": ["http://maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome", "css/gridify" ],
+	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min", "css/gridify" ],
 	"dateModified": "2016-10-17"
 }
 ---
