Removed reference to .min for Font Awesome
The build seemed to not like the the .min reference so I'll just link to normal .css file

--- a/site/pages/v4/design/colour-en.hbs
+++ b/site/pages/v4/design/colour-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Colour",
 	"language": "en",
 	"altLangPrefix": "colour",
-	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min", "css/gridify" ],
+	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome", "css/gridify" ],
 	"dateModified": "2016-10-17"
 }
 ---
