--- a/site/pages/v4/design/icons-fr.hbs
+++ b/site/pages/v4/design/icons-fr.hbs
@@ -3,7 +3,7 @@
 	"title": "Icônes",
 	"language": "fr",
 	"altLangPrefix": "icons",
-	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min"],
+	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome"],
 	"dateModified": "2016-10-17"
 }
 ---
