--- a/site/pages/v4/design/position-en.hbs
+++ b/site/pages/v4/design/position-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Absolute positioning",
 	"language": "en",
 	"altLangPrefix": "position",
-	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min", "css/gridify" ],
+	"css": ["https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome", "css/gridify" ],
 	"dateModified": "2016-10-17"
 }
 ---
